--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<h1>Hola mundo</h1>
 
-<app-por-capital></app-por-capital>
-<app-por-pais></app-por-pais>
-<app-sidebar></app-sidebar>
+<div class="row container mt-4">
+    
+    <app-sidebar class="col-3"></app-sidebar>
+    
+    <div class="col">
+        <router-outlet></router-outlet>
+    </div>
+
+</div>
