--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,16 @@
-<p>por-pais works!</p>
+<h2>Por País</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <app-pais-input (onEnter)="buscar( $event )" (onDebounce)="sugerencias( $event )" placeholder="Buscar país..." ></app-pais-input>
+    </div>
+</div>
+<hr>
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontró nada con el término {{ termino }}
+</div>
+
+<div *ngIf="!hayError && paises.length > 0" class="row">
+    <app-pais-tabla class="col" [paises]="paises"></app-pais-tabla>
+</div>
