--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -12,9 +12,9 @@
         <tr *ngFor="let pais of paises; let i=index">
             <td>{{ i + 1 }}</td>
             <td><img [src]="pais.flags.svg" alt="" class="small-flag"></td>
-            <td>{{ pais.capital }}, {{ pais.name.common }}</td>
+            <td>{{ pais.capital }}, {{ pais.name }}</td>
             <td>{{ pais.population | number }}</td>
-            <td><a [routerLink]="['/pais', pais.cca2]">Ver ...</a></td>
+            <td><a [routerLink]="['/pais', pais.alpha2Code]">Ver ...</a></td>
         </tr>
     </tbody>
 </table>
