--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,17 @@
-<p>por-region works!</p>
+<h3>Buscar pore región <small>región activa</small></h3>
+<hr>
+<h5>Seleccione la región</h5>
+
+<div class="row">
+    <div class="col">
+        <!-- [class.btn-primary]="region === regionActiva" -->
+        <!-- ngClass="{
+            'btn-primary': regionActiva === region,
+            'btn-outline-primary' !== region }" -->
+        <button *ngFor="let region of regiones" class="btn btn-outline-primary" 
+                [class]="getClaseCSS( region )"
+                (click)="activarRegion( region )">
+            {{ region | titlecase }}
+        </button>
+    </div>
+</div>
