--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -3,7 +3,7 @@
 <ng-template #divPais>
     <div class="row">
         <div class="col-12">
-            <h1>Pais: <small>{{ pais.name.common }}</small></h1>
+            <h1>Pais: <small>{{ pais.name }}</small></h1>
         </div>
     </div>
 
@@ -18,8 +18,8 @@
             <h3>Información</h3>
             <ul class="list-group">
                 <li class="list-group-item"><strong>Población</strong> {{ pais.population | number }}</li>
-                <li class="list-group-item"><strong>Código numérico</strong> {{ pais.idd.root }}</li>
-                <li class="list-group-item"><strong>Código </strong> {{ pais.ccn3 }} </li>
+                <li class="list-group-item"><strong>Código numérico</strong> {{ pais.numericCode  }}</li>
+                <li class="list-group-item"><strong>Código </strong> {{ pais.alpha3Code  }} </li>
             </ul>
         </div>
         
@@ -28,7 +28,20 @@
     <h3>Traducciones</h3>
     <div class="row">
         <div class="col">
-            <span class="badge bg-primary me-1">{{ pais.translations }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.de }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.es }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.fr }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.ja }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.it }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.br }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.pt }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.nl }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.hr }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations.fa }}</span>
         </div>
     </div>
+
+    <pre class="mt-5">
+        {{ pais | json }}
+    </pre>
 </ng-template>
