--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,16 +1,20 @@
-<h2>Por Capital</h2>
-<hr>
+<div class="animate__animated animate__fadeIn animate__faster">
 
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar( $event )" placeholder="Buscar capital..." ></app-pais-input>
+    <h2>Por Capital</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar( $event )" placeholder="Buscar capital..." ></app-pais-input>
+        </div>
     </div>
-</div>
-<hr>
-<div *ngIf="hayError" class="alert alert-danger">
-    No se encontró nada con el término {{ termino }}
-</div>
-
-<div *ngIf="!hayError && paises.length > 0" class="row">
-    <app-pais-tabla class="col" [paises]="paises"></app-pais-tabla>
+    <hr>
+    <div *ngIf="hayError" class="alert alert-danger">
+        No se encontró nada con el término {{ termino }}
+    </div>
+    
+    <div *ngIf="!hayError && paises.length > 0" class="row">
+        <app-pais-tabla class="col" [paises]="paises"></app-pais-tabla>
+    </div>
+    
 </div>
